--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "skrip42/api-skeleton"
+    "name": "skrip42/api-skeleton",
     "type": "project",
     "license": "MIT",
     "minimum-stability": "dev",
