--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "type": "project",
     "license": "MIT",
     "prefer-stable": true,
+    "version":"v1.0.4",
     "require": {
         "php": ">=7.2.5",
         "ext-ctype": "*",
