disable lek as default

--- a/config/packages/dev/monolog.yaml
+++ b/config/packages/dev/monolog.yaml
@@ -7,7 +7,7 @@ monolog:
             path: "%kernel.logs_dir%/%kernel.environment%.log"
             max_files: 60
             channels: ["!api"]
-        lek:
-            type: service
-            id: Monolog\Handler\SyslogUdpHandler
-            channels: ["!deprecation"]
+#        lek:
+#            type: service
+#            id: Monolog\Handler\SyslogUdpHandler
+#            channels: ["!deprecation"]
