--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "project",
     "license": "MIT",
     "prefer-stable": true,
-    "version":"v1.0.5",
+    "version":"v2.0.0",
     "require": {
         "php": ">=7.2.5",
         "ext-ctype": "*",
@@ -63,6 +63,7 @@
         }
     },
     "require-dev": {
-        "symfony/var-dumper": "5.2.*"
+        "symfony/var-dumper": "5.2.*",
+        "symfony/maker-bundle": "^1.33"
     }
 }
